Причесан код для RegistrationTests